tests/algorithms/x/Scala/maths/decimal_to_fraction.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:84: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
      if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                          ^
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:84: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
      if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                                                        ^
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:99: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                            ^
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:99: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                                                          ^
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:123: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
      if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                          ^
/workspace/mochi/tests/algorithms/x/Scala/maths/decimal_to_fraction.scala:123: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
      if ((c.charAt(BigInt(0)) >= '0' && c.charAt(BigInt(0)) <= '9').asInstanceOf[Boolean]) {
                                                        ^
6 errors found
